# video-object-removal

./: .gitignore
inpainting/lib/channelnorm_package/: CMakeLists.txt  build.py  make.sh
inpainting/lib/channelnorm_package/_ext/channelnorm/: __init__.py
inpainting/lib/channelnorm_package/src/: ChannelNorm_kernel.cu
inpainting/lib/correlation_package/: build.py  make.sh
inpainting/lib/correlation_package/_ext/correlation/: __init__.py
inpainting/lib/resample2d_package/: build.py  make.sh
inpainting/lib/resample2d_package/_ext/resample2d/: __init__.py
inpainting/models/correlation_package/: build.py
